# autogradescope

./: .buildinfo  .envrc  .gitignore  MANIFEST.in  README.md  flake.nix  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: test.yaml
_modules/: index.html
_modules/autogradescope/: decorators.html  doctests.html  settings.html
autograder/setup/: run_autograder
autograder/setup/autogradescope/: doctests.py
autograder/tests/: test_private.py  test_public.py
autogradescope/: __init__.py  __main__.py  _timeout.py  decorators.py  doctests.py  exceptions.py  plugin.py  pytest_plugin.py  settings.py  timeout.py
autogradescope/template/: Makefile  requirements.txt
autogradescope/template/setup/: requirements.txt
autogradescope/template/tests/: test_private.py  test_public.py
doc/source/: conf.py  index.rst
example/: Makefile  autogradescope  conftest.py  results.json  submission.py  test_example.py  test_submission.py
example/setup/: conftest.py
example/setup/autogradescope/: __main__.py  _timeout.py
example/solution/: foo.py
example/tests/: test_private.py  test_public.py
test/: test_integration.py  test_settings.py
