[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "autogradescope"
version = "0.1.0"

[options]
packages = ["autogradescope"] 
install_requires = ["pytest", "click", "rich"]

[options.package_data]
autogradescope = ["template/**/*"]

[project.scripts]
autogradescope = "autogradescope.__main__:main"
